Bug 795520.  Don't fail to return a computed CSS declaration just because the style change that will give us a presshell has not been processed yet.  r=dbaron

Another, more risky, option would be to always return a declaration
from getComputedStyle, even if we have no presshell, then just throw
(after flushing, as needed) if people try to get style info for it
just like we already do for declarations whose document loses a
presshell.  This might cause compat issues on sites that can deal with
null but not exceptions, though.  :(